# gige

./: CMakeLists.txt  README.md
Licenses/: OpenCV License.txt
enumerate/: CMakeLists.txt  enumerate  enumerate.cpp
grab/: CMakeLists.txt  grab  grab.cpp
grab_wo_opencv/: grab_wo_opencv.cpp  resultado.tif
licenses/: pylon_7.3.0_Third-Party_Licenses.txt
